Fixed footer alignment.

--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -50,3 +50,12 @@ input {
     margin-right: -4px;
     align-self: center;
 }
+
+.embeddedFooter {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    font-size: 12pt;
+    margin-top: 100px;
+}
