--- a/src/main/resources/static/css/userAccountPage.css
+++ b/src/main/resources/static/css/userAccountPage.css
@@ -1,12 +1,3 @@
-.embeddedFooter {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
-    font-size: 12pt;
-    margin-bottom: -10px;
-}
-
 .form-control {
     font-size: 14px;
 }
